config/emcovs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: istio-system
  name: remote-emco-vsvc
spec:
  hosts:
  - "*"
  gateways:
  - hello-gateway
  http:
  - match:
    - uri:
        prefix: /projects
    route:
    - destination:
        host: emco.cluster3
        port:
          number: 8000
