config/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: istio-system
  name: remote-hello-vsvc
spec:
  hosts:
  - "*"
  gateways:
  - hello-gateway
  http:
  - match:
    - uri:
        prefix: /headers
    route:
    - destination:
        host: httpbin.bar.cluster2
        port:
          number: 8000
  - match:
    - uri:
        prefix: /oauth2/callback
    route:
    - destination:
        host: oauth2-proxy.foo.svc.cluster.local
        port:
          number: 80

  - match:
    - uri:
        prefix: /status
    route:
    - destination:
        host: httpbin.bar.cluster2
        port:
          number: 8000
